# entropic_cmb

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
configs/: wilson_baseline.json
out_cmb/: run.json
out_cmb/tables/: fit_points.csv  posthoc.json  summary.csv
src/egrcmb/: __init__.py  ar1.py  cli.py  constants.py  diagnostics.py  elm.py  fit.py  mcmc_utils.py  mg_kernel.py  model.py  run_all.py
tests/: test_smoke.py
